re-release packages with failures from twine bug
Twine 1.12.0 has a bug that caused it to report a failure even when
the upload was successful. That resulted in quite a few partially
successful releases, with only wheels uploaded to PyPI, no
announcements, and no tarballs uploaded to tarballs.o.o.

This patch re-tags all of those releases to give us good artifacts.

Change-Id: Iaea87ebe23bcad27d4422f3c477bf2fa37cf5bc5
Signed-off-by: Doug Hellmann <doug@doughellmann.com>

--- a/deliverables/ocata/ironic-lib.yaml
+++ b/deliverables/ocata/ironic-lib.yaml
@@ -36,5 +36,11 @@ releases:
       - hash: 99b3182e347fa886debab410284a157d6a3223ca
         repo: openstack/ironic-lib
     version: 2.5.3
+  - diff-start: 2.5.2
+    projects:
+      - comment: 'procedural tag to handle release job failure'
+        hash: 99b3182e347fa886debab410284a157d6a3223ca
+        repo: openstack/ironic-lib
+    version: 2.5.4
 repository-settings:
   openstack/ironic-lib: {}
