--- a/deliverables/pike/tripleo-common.yaml
+++ b/deliverables/pike/tripleo-common.yaml
@@ -102,6 +102,12 @@ releases:
       - hash: 92d69ae43ab559e618c963b27751c1cc9e2d5211
         repo: openstack/tripleo-common
     version: 7.6.16
+  - diff-start: 7.6.15
+    projects:
+      - comment: 'procedural tag to handle release job failure'
+        hash: 92d69ae43ab559e618c963b27751c1cc9e2d5211
+        repo: openstack/tripleo-common
+    version: 7.6.17
 team: tripleo
 type: other
 release-notes: https://docs.openstack.org/releasenotes/tripleo-common/pike.html
