--- a/deliverables/rocky/networking-bgpvpn.yaml
+++ b/deliverables/rocky/networking-bgpvpn.yaml
@@ -32,6 +32,12 @@ releases:
       - hash: d406efdf423af7f0dc72b11553e9255b10b99759
         repo: openstack/networking-bgpvpn
     version: 9.0.1
+  - diff-start: 9.0.0
+    projects:
+      - comment: 'procedural tag to handle release job failure'
+        hash: d406efdf423af7f0dc72b11553e9255b10b99759
+        repo: openstack/networking-bgpvpn
+    version: 9.0.2
 branches:
   - location: 9.0.0.0rc1
     name: stable/rocky
