--- a/deliverables/rocky/oslo.privsep.yaml
+++ b/deliverables/rocky/oslo.privsep.yaml
@@ -19,6 +19,12 @@ releases:
       - hash: f7ba0aa49a35bcb1e6c67dbe3dc22cf33ccc436b
         repo: openstack/oslo.privsep
     version: 1.29.1
+  - diff-start: 1.29.0
+    projects:
+      - comment: 'procedural tag to handle release job failure'
+        hash: f7ba0aa49a35bcb1e6c67dbe3dc22cf33ccc436b
+        repo: openstack/oslo.privsep
+    version: 1.29.2
 branches:
   - location: 1.29.0
     name: stable/rocky
