--- a/deliverables/rocky/oslo.service.yaml
+++ b/deliverables/rocky/oslo.service.yaml
@@ -31,6 +31,12 @@ releases:
       - hash: 67a8a8c7f5c606bd1ef394069d6a4969d21ae3a5
         repo: openstack/oslo.service
     version: 1.31.4
+  - diff-start: 1.31.3
+    projects:
+      - comment: 'procedural tag to handle release job failure'
+        hash: 67a8a8c7f5c606bd1ef394069d6a4969d21ae3a5
+        repo: openstack/oslo.service
+    version: 1.31.5
 branches:
   - location: 1.31.3
     name: stable/rocky
