--- a/deliverables/stein/castellan.yaml
+++ b/deliverables/stein/castellan.yaml
@@ -10,3 +10,9 @@ releases:
       - hash: 8f112b9afbbc949c80f57a4f33df4e68ae9ea620
         repo: openstack/castellan
     version: 0.20.0
+  - diff-start: 0.18.0
+    projects:
+      - comment: 'procedural tag to handle release job failure'
+        hash: 8f112b9afbbc949c80f57a4f33df4e68ae9ea620
+        repo: openstack/castellan
+    version: 0.20.1
