--- a/deliverables/stein/oslo.concurrency.yaml
+++ b/deliverables/stein/oslo.concurrency.yaml
@@ -11,3 +11,9 @@ releases:
       - hash: d56295b8a91ab1b6fe1cc402e58404d86d1cd97c
         repo: openstack/oslo.concurrency
     version: 3.28.0
+  - diff-start: 3.27.0
+    projects:
+      - comment: 'procedural tag to handle release job failure'
+        hash: d56295b8a91ab1b6fe1cc402e58404d86d1cd97c
+        repo: openstack/oslo.concurrency
+    version: 3.28.1
