--- a/deliverables/pike/python-tripleoclient.yaml
+++ b/deliverables/pike/python-tripleoclient.yaml
@@ -74,6 +74,12 @@ releases:
       - hash: 375f6a20b3c2335c482f2d5f66b961a2dab67656
         repo: openstack/python-tripleoclient
     version: 7.3.13
+  - diff-start: 7.3.12
+    projects:
+      - comment: 'procedural tag to handle release job failure'
+        hash: 375f6a20b3c2335c482f2d5f66b961a2dab67656
+        repo: openstack/python-tripleoclient
+    version: 7.3.14
 team: tripleo
 type: library
 release-notes: https://docs.openstack.org/releasenotes/python-tripleoclient/pike.html
