--- a/deliverables/queens/tripleo-heat-templates.yaml
+++ b/deliverables/queens/tripleo-heat-templates.yaml
@@ -54,6 +54,12 @@ releases:
       - hash: 8537f0230216097a3b6760f0d4636ba6854dcb6b
         repo: openstack/tripleo-heat-templates
     version: 8.0.6
+  - diff-start: 8.0.5
+    projects:
+      - comment: 'procedural tag to handle release job failure'
+        hash: 8537f0230216097a3b6760f0d4636ba6854dcb6b
+        repo: openstack/tripleo-heat-templates
+    version: 8.0.7
 repository-settings:
   openstack/tripleo-heat-templates: {}
 branches:
