--- a/deliverables/rocky/networking-bagpipe.yaml
+++ b/deliverables/rocky/networking-bagpipe.yaml
@@ -32,6 +32,12 @@ releases:
       - hash: 6150dccbc763a8d5b5ff22c2bbbcec8527e7213d
         repo: openstack/networking-bagpipe
     version: 9.0.1
+  - diff-start: 9.0.0
+    projects:
+      - comment: 'procedural tag to handle release job failure'
+        hash: 6150dccbc763a8d5b5ff22c2bbbcec8527e7213d
+        repo: openstack/networking-bagpipe
+    version: 9.0.2
 branches:
   - location: 9.0.0.0rc1
     name: stable/rocky
