--- a/deliverables/stein/oslo.config.yaml
+++ b/deliverables/stein/oslo.config.yaml
@@ -11,3 +11,9 @@ releases:
       - hash: 7072a7552dcb58a60d08c73c1d002fdf1c5a6202
         repo: openstack/oslo.config
     version: 6.5.0
+  - diff-start: 6.4.0
+    projects:
+      - comment: 'procedural tag to handle release job failure'
+        hash: 7072a7552dcb58a60d08c73c1d002fdf1c5a6202
+        repo: openstack/oslo.config
+    version: 6.5.1
