--- a/deliverables/stein/oslo.privsep.yaml
+++ b/deliverables/stein/oslo.privsep.yaml
@@ -11,3 +11,9 @@ releases:
       - hash: 9391cbf297d6baad20a3b67a973dd671499278d3
         repo: openstack/oslo.privsep
     version: 1.30.0
+  - diff-start: 1.29.0
+    projects:
+      - comment: 'procedural tag to handle release job failure'
+        hash: 9391cbf297d6baad20a3b67a973dd671499278d3
+        repo: openstack/oslo.privsep
+    version: 1.30.1
