training-labs stable/rocky
Change-Id: I748090888362613822b8b58c8ff7494e4507058d

--- a/deliverables/_independent/training-labs.yaml
+++ b/deliverables/_independent/training-labs.yaml
@@ -7,5 +7,8 @@ branches:
   - name: stable/queens
     location:
       openstack/training-labs: b5a44c367b99a13af577248b354572e241734d7a
+  - name: stable/rocky
+    location:
+      openstack/training-labs: 29e18ecf65d106c22a8613664f99051417b96662
 repository-settings:
   openstack/training-labs: {}
