--- a/deliverables/_independent/pymod2pkg.yaml
+++ b/deliverables/_independent/pymod2pkg.yaml
@@ -136,5 +136,9 @@ releases:
       - hash: afde7c91a90081d5a8af047c619774c17ab985c6
         repo: openstack/pymod2pkg
     version: 0.14.0
+  - projects:
+      - hash: 2554db65616feb2d0ea4af3b4336ac9763118726
+        repo: openstack/pymod2pkg
+    version: 0.15.0
 repository-settings:
   openstack/pymod2pkg: {}
