[rally] Propose 1.2.1 release
Depends-On: Ie9375f6de7a65e09e4ee087e9fa3ce279e4c6cd6
Change-Id: I10b1e8ad007ed50f4bc38de468bdc51619e5e0b2

--- a/deliverables/_independent/rally.yaml
+++ b/deliverables/_independent/rally.yaml
@@ -122,5 +122,9 @@ releases:
     projects:
       - repo: openstack/rally
         hash: f58317fe8b3a517914ad0ea39b14f53ebb2e6477
+  - version: 1.2.1
+    projects:
+      - repo: openstack/rally
+        hash: 4ddf0bdb7120dcbaf85c40ebd383c279db8e3fc6
 repository-settings:
   openstack/rally: {}
