--- a/deliverables/_independent/openstackdocstheme.yaml
+++ b/deliverables/_independent/openstackdocstheme.yaml
@@ -168,5 +168,9 @@ releases:
       - hash: 39e7704612eab5353c7a63e7ac49b29634883943
         repo: openstack/openstackdocstheme
     version: 1.24.1
+  - projects:
+      - hash: c3bf0d1f626670c4d991468621aff9fea7e66f54
+        repo: openstack/openstackdocstheme
+    version: 1.25.0
 repository-settings:
   openstack/openstackdocstheme: {}
