--- a/deliverables/queens/ovsdbapp.yaml
+++ b/deliverables/queens/ovsdbapp.yaml
@@ -36,6 +36,10 @@ releases:
     projects:
       - repo: openstack/ovsdbapp
         hash: fd64d41ea6f208a5752fbcd45952a04633ee1392
+  - version: 0.10.2
+    projects:
+      - repo: openstack/ovsdbapp
+        hash: 1477c6cee6e3a192a897f50ae51100545fecd0ff
 branches:
   - name: stable/queens
     location: 0.9.0
