--- a/deliverables/rocky/ovsdbapp.yaml
+++ b/deliverables/rocky/ovsdbapp.yaml
@@ -16,6 +16,10 @@ releases:
       - hash: 6419a2e187c2c20930b7af2a5dad29b92f088a6e
         repo: openstack/ovsdbapp
     version: 0.12.1
+  - projects:
+      - hash: 057eeb319c47fb27d8067410593297dca6e1e097
+        repo: openstack/ovsdbapp
+    version: 0.12.2
 repository-settings:
   openstack/ovsdbapp: {}
 branches:
