[rally] Include openstack/rally-openstack package
Some time ago, Rally team moved in-tree OpenStack plugins to the
separate repository for simplification of requirements and release
management.

All previous releases of openstack/rally-openstack package were
processed by pushing local tag throw gerrit.

This patch adds information about rally-opensatck repository and
existing releases, so it will be possible to cut new releases throw the
unified and common process (by pushing a proper change to
openstack/releases project).

Change-Id: I5cad1186cde0adc2f1d142280f386b0bcb4af501

--- a/deliverables/_independent/rally.yaml
+++ b/deliverables/_independent/rally.yaml
@@ -2,7 +2,7 @@
 launchpad: rally
 team: rally
 type: other
-release-notes: http://rally.readthedocs.io/en/latest/project_info/release_notes/archive.html
+release-notes: https://git.openstack.org/cgit/openstack/rally/tree/CHANGELOG.rst
 include-pypi-link: yes
 branches:
   - name: stable/0.9
