--- a/deliverables/_independent/openstackdocstheme.yaml
+++ b/deliverables/_independent/openstackdocstheme.yaml
@@ -172,5 +172,9 @@ releases:
       - hash: c3bf0d1f626670c4d991468621aff9fea7e66f54
         repo: openstack/openstackdocstheme
     version: 1.25.0
+  - projects:
+      - hash: fe777233f0f3c10e3715cd820bcdeec2165db97a
+        repo: openstack/openstackdocstheme
+    version: 1.25.1
 repository-settings:
   openstack/openstackdocstheme: {}
