--- a/deliverables/stein/castellan.yaml
+++ b/deliverables/stein/castellan.yaml
@@ -16,3 +16,7 @@ releases:
         hash: 8f112b9afbbc949c80f57a4f33df4e68ae9ea620
         repo: openstack/castellan
     version: 0.20.1
+  - projects:
+      - hash: 6510f8639ad832330dd38af9c4a834ad02098a84
+        repo: openstack/castellan
+    version: 1.0.0
