--- a/deliverables/ocata/manila.yaml
+++ b/deliverables/ocata/manila.yaml
@@ -40,5 +40,9 @@ releases:
     projects:
       - repo: openstack/manila
         hash: 48b5c91ad73e74a8e35b3649b0433ba86d6bdf06
+  - version: 4.0.2
+    projects:
+      - repo: openstack/manila
+        hash: 2ae3ae7f9f54d2ac9a2ec039842228ec1afeafe7
 repository-settings:
   openstack/manila: {}
