Switch stein deliverables to cycle-with-rc
This adds the new release model to the schema and updates any existing
cycle-with-milestones stein deliverables to be cycle-with-rc.

Change-Id: Ic774ce2f50dd2bb1d0e5b9976f3c7d60a98d6752
Signed-off-by: Sean McGinnis <sean.mcginnis@gmail.com>

--- a/deliverables/stein/cinder.yaml
+++ b/deliverables/stein/cinder.yaml
@@ -1,6 +1,6 @@
 ---
 launchpad: cinder
-release-model: cycle-with-milestones
+release-model: cycle-with-rc
 team: cinder
 type: service
 repository-settings:
