--- a/deliverables/stein/cyborg.yaml
+++ b/deliverables/stein/cyborg.yaml
@@ -1,6 +1,6 @@
 ---
 launchpad: openstack-cyborg
-release-model: cycle-with-milestones
+release-model: cycle-with-rc
 team: cyborg
 type: service
 repository-settings:
