--- a/deliverables/stein/masakari.yaml
+++ b/deliverables/stein/masakari.yaml
@@ -1,6 +1,6 @@
 ---
 launchpad: masakari
-release-model: cycle-with-milestones
+release-model: cycle-with-rc
 team: masakari
 type: service
 repository-settings:
