--- a/deliverables/stein/murano-dashboard.yaml
+++ b/deliverables/stein/murano-dashboard.yaml
@@ -1,6 +1,6 @@
 ---
 launchpad: murano
-release-model: cycle-with-milestones
+release-model: cycle-with-rc
 release-type: horizon
 team: murano
 type: horizon-plugin
