--- a/deliverables/stein/neutron.yaml
+++ b/deliverables/stein/neutron.yaml
@@ -2,6 +2,6 @@
 launchpad: neutron
 team: neutron
 type: service
-release-model: cycle-with-milestones
+release-model: cycle-with-rc
 repository-settings:
   openstack/neutron: {}
