--- a/deliverables/stein/octavia.yaml
+++ b/deliverables/stein/octavia.yaml
@@ -1,7 +1,7 @@
 ---
 include-pypi-link: yes
 storyboard: 908
-release-model: cycle-with-milestones
+release-model: cycle-with-rc
 release-type: python-pypi
 team: octavia
 type: service
