--- a/deliverables/stein/release-test.yaml
+++ b/deliverables/stein/release-test.yaml
@@ -3,7 +3,7 @@ launchpad: nova
 team: 'Release Management'
 type: other
 release-type: python-pypi
-release-model: cycle-with-milestones
+release-model: cycle-with-rc
 repository-settings:
   openstack/release-test:
     tarball-base: openstack-release-test
