--- a/deliverables/stein/searchlight-ui.yaml
+++ b/deliverables/stein/searchlight-ui.yaml
@@ -1,7 +1,7 @@
 ---
 include-pypi-link: true
 storyboard: openstack/searchlight-ui
-release-model: cycle-with-milestones
+release-model: cycle-with-rc
 team: searchlight
 type: horizon-plugin
 repository-settings:
