--- a/deliverables/stein/storlets.yaml
+++ b/deliverables/stein/storlets.yaml
@@ -2,6 +2,6 @@
 launchpad: storlets
 team: storlets
 type: service
-release-model: cycle-with-milestones
+release-model: cycle-with-rc
 repository-settings:
   openstack/storlets: {}
