--- a/deliverables/stein/trove-dashboard.yaml
+++ b/deliverables/stein/trove-dashboard.yaml
@@ -1,6 +1,6 @@
 ---
 launchpad: trove
-release-model: cycle-with-milestones
+release-model: cycle-with-rc
 team: trove
 type: horizon-plugin
 repository-settings:
