--- a/deliverables/stein/barbican.yaml
+++ b/deliverables/stein/barbican.yaml
@@ -1,6 +1,6 @@
 ---
 launchpad: barbican
-release-model: cycle-with-milestones
+release-model: cycle-with-rc
 team: barbican
 type: service
 repository-settings:
