--- a/deliverables/stein/blazar.yaml
+++ b/deliverables/stein/blazar.yaml
@@ -1,6 +1,6 @@
 ---
 launchpad: blazar
-release-model: cycle-with-milestones
+release-model: cycle-with-rc
 team: blazar
 type: service
 repository-settings:
