--- a/deliverables/stein/congress.yaml
+++ b/deliverables/stein/congress.yaml
@@ -1,6 +1,6 @@
 ---
 launchpad: congress
-release-model: cycle-with-milestones
+release-model: cycle-with-rc
 team: congress
 type: service
 repository-settings:
