--- a/deliverables/stein/designate-dashboard.yaml
+++ b/deliverables/stein/designate-dashboard.yaml
@@ -1,6 +1,6 @@
 ---
 launchpad: designate-dashboard
-release-model: cycle-with-milestones
+release-model: cycle-with-rc
 release-type: horizon
 team: designate
 type: horizon-plugin
