--- a/deliverables/stein/designate.yaml
+++ b/deliverables/stein/designate.yaml
@@ -2,7 +2,7 @@
 artifact-link-mode: tarball
 include-pypi-link: no
 launchpad: designate
-release-model: cycle-with-milestones
+release-model: cycle-with-rc
 team: designate
 type: service
 repository-settings:
