--- a/deliverables/stein/glance.yaml
+++ b/deliverables/stein/glance.yaml
@@ -2,7 +2,7 @@
 artifact-link-mode: tarball
 include-pypi-link: no
 launchpad: glance
-release-model: cycle-with-milestones
+release-model: cycle-with-rc
 team: glance
 type: service
 repository-settings:
