--- a/deliverables/stein/heat.yaml
+++ b/deliverables/stein/heat.yaml
@@ -1,6 +1,6 @@
 ---
 launchpad: heat
-release-model: cycle-with-milestones
+release-model: cycle-with-rc
 team: heat
 type: service
 repository-settings:
