--- a/deliverables/stein/horizon.yaml
+++ b/deliverables/stein/horizon.yaml
@@ -1,6 +1,6 @@
 ---
 launchpad: horizon
-release-model: cycle-with-milestones
+release-model: cycle-with-rc
 team: horizon
 type: service
 repository-settings:
