--- a/deliverables/stein/keystone.yaml
+++ b/deliverables/stein/keystone.yaml
@@ -1,6 +1,6 @@
 ---
 launchpad: keystone
-release-model: cycle-with-milestones
+release-model: cycle-with-rc
 team: keystone
 type: service
 repository-settings:
