--- a/deliverables/stein/manila.yaml
+++ b/deliverables/stein/manila.yaml
@@ -1,6 +1,6 @@
 ---
 launchpad: manila
-release-model: cycle-with-milestones
+release-model: cycle-with-rc
 team: manila
 type: service
 repository-settings:
