--- a/deliverables/stein/masakari-monitors.yaml
+++ b/deliverables/stein/masakari-monitors.yaml
@@ -1,6 +1,6 @@
 ---
 launchpad: masakari-monitors
-release-model: cycle-with-milestones
+release-model: cycle-with-rc
 team: masakari
 type: other
 repository-settings:
