--- a/deliverables/stein/mistral.yaml
+++ b/deliverables/stein/mistral.yaml
@@ -1,7 +1,7 @@
 ---
 include-pypi-link: yes
 launchpad: mistral
-release-model: cycle-with-milestones
+release-model: cycle-with-rc
 team: mistral
 type: service
 repository-settings:
