--- a/deliverables/stein/murano.yaml
+++ b/deliverables/stein/murano.yaml
@@ -1,6 +1,6 @@
 ---
 launchpad: murano
-release-model: cycle-with-milestones
+release-model: cycle-with-rc
 team: murano
 type: service
 repository-settings:
