--- a/deliverables/stein/networking-bagpipe.yaml
+++ b/deliverables/stein/networking-bagpipe.yaml
@@ -2,7 +2,7 @@
 launchpad: networking-bagpipe
 team: neutron
 type: other
-release-model: cycle-with-milestones
+release-model: cycle-with-rc
 include-pypi-link: yes
 repository-settings:
   openstack/networking-bagpipe: {}
