--- a/deliverables/stein/networking-bgpvpn.yaml
+++ b/deliverables/stein/networking-bgpvpn.yaml
@@ -2,7 +2,7 @@
 launchpad: bgpvpn
 team: neutron
 type: other
-release-model: cycle-with-milestones
+release-model: cycle-with-rc
 include-pypi-link: yes
 repository-settings:
   openstack/networking-bgpvpn: {}
