--- a/deliverables/stein/networking-odl.yaml
+++ b/deliverables/stein/networking-odl.yaml
@@ -2,7 +2,7 @@
 launchpad: networking-odl
 team: neutron
 type: other
-release-model: cycle-with-milestones
+release-model: cycle-with-rc
 release-type: neutron
 include-pypi-link: yes
 repository-settings:
