--- a/deliverables/stein/networking-ovn.yaml
+++ b/deliverables/stein/networking-ovn.yaml
@@ -2,7 +2,7 @@
 launchpad: networking-ovn
 team: neutron
 type: other
-release-model: cycle-with-milestones
+release-model: cycle-with-rc
 release-type: neutron
 include-pypi-link: yes
 repository-settings:
