--- a/deliverables/stein/networking-powervm.yaml
+++ b/deliverables/stein/networking-powervm.yaml
@@ -1,6 +1,6 @@
 ---
 launchpad: networking-powervm
-release-model: cycle-with-milestones
+release-model: cycle-with-rc
 team: PowerVMStackers
 type: other
 repository-settings:
