--- a/deliverables/stein/neutron-lbaas.yaml
+++ b/deliverables/stein/neutron-lbaas.yaml
@@ -1,6 +1,6 @@
 ---
 storyboard: 906
-release-model: cycle-with-milestones
+release-model: cycle-with-rc
 release-type: neutron
 team: octavia
 type: other
