--- a/deliverables/stein/nova.yaml
+++ b/deliverables/stein/nova.yaml
@@ -1,6 +1,6 @@
 ---
 launchpad: nova
-release-model: cycle-with-milestones
+release-model: cycle-with-rc
 team: nova
 type: service
 repository-settings:
