--- a/deliverables/stein/octavia-dashboard.yaml
+++ b/deliverables/stein/octavia-dashboard.yaml
@@ -1,7 +1,7 @@
 ---
 include-pypi-link: yes
 storyboard: 909
-release-model: cycle-with-milestones
+release-model: cycle-with-rc
 release-type: horizon
 team: octavia
 type: horizon-plugin
