--- a/deliverables/stein/qinling.yaml
+++ b/deliverables/stein/qinling.yaml
@@ -2,6 +2,6 @@
 team: qinling
 type: service
 storyboard: 927
-release-model: cycle-with-milestones
+release-model: cycle-with-rc
 repository-settings:
   openstack/qinling: {}
