--- a/deliverables/stein/sahara-dashboard.yaml
+++ b/deliverables/stein/sahara-dashboard.yaml
@@ -1,6 +1,6 @@
 ---
 launchpad: sahara
-release-model: cycle-with-milestones
+release-model: cycle-with-rc
 team: sahara
 type: horizon-plugin
 repository-settings:
