--- a/deliverables/stein/sahara-image-elements.yaml
+++ b/deliverables/stein/sahara-image-elements.yaml
@@ -1,6 +1,6 @@
 ---
 launchpad: sahara
-release-model: cycle-with-milestones
+release-model: cycle-with-rc
 release-type: python-pypi
 team: sahara
 type: other
