--- a/deliverables/stein/searchlight.yaml
+++ b/deliverables/stein/searchlight.yaml
@@ -1,6 +1,6 @@
 ---
 storyboard: openstack/searchlight
-release-model: cycle-with-milestones
+release-model: cycle-with-rc
 team: searchlight
 type: service
 repository-settings:
