--- a/deliverables/stein/senlin.yaml
+++ b/deliverables/stein/senlin.yaml
@@ -1,6 +1,6 @@
 ---
 launchpad: senlin
-release-model: cycle-with-milestones
+release-model: cycle-with-rc
 team: senlin
 type: service
 repository-settings:
