--- a/deliverables/stein/zaqar-ui.yaml
+++ b/deliverables/stein/zaqar-ui.yaml
@@ -1,6 +1,6 @@
 ---
 launchpad: zaqar-ui
-release-model: cycle-with-milestones
+release-model: cycle-with-rc
 release-type: python-service
 team: zaqar
 type: horizon-plugin
