--- a/deliverables/stein/zaqar.yaml
+++ b/deliverables/stein/zaqar.yaml
@@ -1,6 +1,6 @@
 ---
 launchpad: zaqar
-release-model: cycle-with-milestones
+release-model: cycle-with-rc
 team: zaqar
 type: service
 repository-settings:
