--- a/deliverables/rocky/octavia.yaml
+++ b/deliverables/rocky/octavia.yaml
@@ -38,6 +38,10 @@ releases:
       - hash: 8d74497cf6fd22620d0881ad2549acd69a537776
         repo: openstack/octavia
     version: 3.0.0
+  - projects:
+      - hash: c57ae8d3a75461c9d7d0a69cca0219f539539fca
+        repo: openstack/octavia
+    version: 3.0.1
 branches:
   - location: 3.0.0.0rc1
     name: stable/rocky
