--- a/deliverables/rocky/mistral.yaml
+++ b/deliverables/rocky/mistral.yaml
@@ -65,6 +65,10 @@ releases:
       - hash: e50fbfbdd903340402716dc306f5c5354b9060ab
         repo: openstack/mistral
     version: 7.0.2
+  - projects:
+      - hash: 24f8ef65d04e4acfb6df15d3544d08041b0a422b
+        repo: openstack/mistral
+    version: 7.0.3
 repository-settings:
   openstack/mistral: {}
   openstack/mistral-dashboard: {}
