--- a/deliverables/queens/mistral.yaml
+++ b/deliverables/queens/mistral.yaml
@@ -70,6 +70,10 @@ releases:
       - hash: e761742f652a981eddf8ea3b50e2eabea3ca6b97
         repo: openstack/mistral-extra
     version: 6.0.4
+  - projects:
+      - hash: 824c1033633da184bec0e31c4ee17327028a93eb
+        repo: openstack/mistral
+    version: 6.0.5
 repository-settings:
   openstack/mistral: {}
   openstack/mistral-dashboard: {}
