--- a/deliverables/pike/mistral.yaml
+++ b/deliverables/pike/mistral.yaml
@@ -97,6 +97,10 @@ releases:
       - hash: 58a816da3b810ae8b31c91a0829bdca3e0e5903e
         repo: openstack/mistral-extra
     version: 5.2.5
+  - projects:
+      - hash: 45c9d4ece0070e4c937b546852dfc0123c03fde4
+        repo: openstack/mistral
+    version: 5.2.6
 branches:
   - location: 5.0.0.0rc1
     name: stable/pike
