Oslo releases for 2018-10-2
Change-Id: If2b9f5941008bf89a54fc479693bd0ca2c86b8a2

--- a/deliverables/_independent/pbr.yaml
+++ b/deliverables/_independent/pbr.yaml
@@ -104,5 +104,9 @@ releases:
       - hash: 6f5c1ee8e4e9c1c05f16b7dfe57c3245ad38b0cf
         repo: openstack-dev/pbr
     version: 4.2.0
+  - projects:
+      - hash: 97e343c0cfe03e5d09a810a0e9f1f239fd76233f
+        repo: openstack-dev/pbr
+    version: 4.3.0
 repository-settings:
   openstack-dev/pbr: {}
