--- a/deliverables/_independent/reno.yaml
+++ b/deliverables/_independent/reno.yaml
@@ -171,5 +171,9 @@ releases:
       - hash: 355e1674be8c37e67f59e8bcd39bf7d6a0aac792
         repo: openstack/reno
     version: 2.11.0
+  - projects:
+      - hash: e12ecf7c77babd935cb67f3db50e64c5df5611ab
+        repo: openstack/reno
+    version: 2.11.1
 repository-settings:
   openstack/reno: {}
