--- a/deliverables/queens/openstack-ansible.yaml
+++ b/deliverables/queens/openstack-ansible.yaml
@@ -873,6 +873,10 @@ releases:
       - hash: af0be26b13ef1e28732ee0b7e8bbbf1c1a8d1732
         repo: openstack/openstack-ansible
     version: 17.1.1
+  - projects:
+      - hash: 077b3ce0c554c4d169582b243419d6b668148c03
+        repo: openstack/openstack-ansible
+    version: 17.1.2
 repository-settings:
   openstack/ansible-hardening: {}
   openstack/openstack-ansible: {}
