--- a/deliverables/pike/openstack-ansible.yaml
+++ b/deliverables/pike/openstack-ansible.yaml
@@ -1588,6 +1588,10 @@ releases:
       - hash: 159a70d0d7dc002c497f868c823555ae9baa9cd3
         repo: openstack/openstack-ansible
     version: 16.0.19
+  - projects:
+      - hash: 7b692ea674e298b7cf856c3e1a0f6269cfa0f4fb
+        repo: openstack/openstack-ansible
+    version: 16.0.20
 repository-settings:
   openstack/ansible-hardening: {}
   openstack/openstack-ansible: {}
