--- a/deliverables/ocata/openstack-ansible.yaml
+++ b/deliverables/ocata/openstack-ansible.yaml
@@ -2216,6 +2216,10 @@ releases:
       - hash: 9dd290a6ffafa8ea60b8e6851224899652e62809
         repo: openstack/openstack-ansible
     version: 15.1.27
+  - projects:
+      - hash: 63728f40c97e87c83459822636b11a2b025f5f9f
+        repo: openstack/openstack-ansible
+    version: 15.1.28
 repository-settings:
   openstack/ansible-hardening: {}
   openstack/openstack-ansible: {}
