Final Rocky release for TripleO
Tag final Rocky tag for:
- tripleo-heat-templates.yaml
- tripleo-image-elements.yaml
- tripleo-puppet-elements.yaml

Change-Id: I820c50e2cfa77194836b78702d74f60a8dc09bea

--- a/deliverables/rocky/tripleo-image-elements.yaml
+++ b/deliverables/rocky/tripleo-image-elements.yaml
@@ -23,6 +23,11 @@ releases:
       - hash: 39e37fe5236addf4bd4e1f28f07829307cf57430
         repo: openstack/tripleo-image-elements
     version: 9.0.0.0rc1
+  - diff-start: 8.0.0.0rc1
+    projects:
+      - hash: 39e37fe5236addf4bd4e1f28f07829307cf57430
+        repo: openstack/tripleo-image-elements
+    version: 9.0.0
 branches:
   - location: 9.0.0.0rc1
     name: stable/rocky
