--- a/deliverables/rocky/tripleo-puppet-elements.yaml
+++ b/deliverables/rocky/tripleo-puppet-elements.yaml
@@ -27,6 +27,11 @@ releases:
       - hash: daf9069c71bfe9369be6f8be13859b6fd807c821
         repo: openstack/tripleo-puppet-elements
     version: 9.0.0.0rc2
+  - diff-start: 8.0.0.0rc1
+    projects:
+      - hash: daf9069c71bfe9369be6f8be13859b6fd807c821
+        repo: openstack/tripleo-puppet-elements
+    version: 9.0.0
 branches:
   - location: 9.0.0.0rc1
     name: stable/rocky
