--- a/deliverables/rocky/tripleo-heat-templates.yaml
+++ b/deliverables/rocky/tripleo-heat-templates.yaml
@@ -27,6 +27,11 @@ releases:
       - hash: 888743ce76920740e720452c4f0b1c3edf9c3062
         repo: openstack/tripleo-heat-templates
     version: 9.0.0.0rc2
+  - diff-start: 8.0.0.0rc1
+    projects:
+      - hash: 888743ce76920740e720452c4f0b1c3edf9c3062
+        repo: openstack/tripleo-heat-templates
+    version: 9.0.0
 branches:
   - location: 9.0.0.0rc1
     name: stable/rocky
