--- a/deliverables/stein/os-brick.yaml
+++ b/deliverables/stein/os-brick.yaml
@@ -11,3 +11,7 @@ releases:
       - hash: d398fa82334bbabbc4c7d5b8f1fe5a7a4465200e
         repo: openstack/os-brick
     version: 2.6.0
+  - projects:
+      - hash: f29c669c8bf508cc41a82ea0a4052c8d75250459
+        repo: openstack/os-brick
+    version: 2.6.1
