--- a/deliverables/rocky/os-brick.yaml
+++ b/deliverables/rocky/os-brick.yaml
@@ -27,6 +27,10 @@ releases:
       - hash: 641337bec28adddae742a86faf592e360afdd1d8
         repo: openstack/os-brick
     version: 2.5.3
+  - projects:
+      - hash: 67cd70981c9521ae7f60daafa90cee165c495bef
+        repo: openstack/os-brick
+    version: 2.5.4
 branches:
   - location: 2.5.3
     name: stable/rocky
