--- a/deliverables/queens/os-brick.yaml
+++ b/deliverables/queens/os-brick.yaml
@@ -37,6 +37,10 @@ releases:
       - hash: e211056d650b9be9f7501b1497416c8fc14312d5
         repo: openstack/os-brick
     version: 2.3.3
+  - projects:
+      - hash: d4a600748ba487d8ee0a843138c28c093ed3d07a
+        repo: openstack/os-brick
+    version: 2.3.4
 branches:
   - name: stable/queens
     location: 2.3.0
