--- a/deliverables/pike/os-brick.yaml
+++ b/deliverables/pike/os-brick.yaml
@@ -47,6 +47,10 @@ releases:
       - hash: 4090db76673cadb3b8adfceb106069e03414de49
         repo: openstack/os-brick
     version: 1.15.5
+  - projects:
+      - hash: 4bdd072de3216da20491d950c0ecb408d866442d
+        repo: openstack/os-brick
+    version: 1.15.6
 team: cinder
 type: library
 repository-settings:
