First tag for TripleO Stein
We need this tag to start testing upgrades.

Change-Id: I92d706fd5d94ecf803a7357a72b40a8cbce1f9f5

--- a/deliverables/stein/os-apply-config.yaml
+++ b/deliverables/stein/os-apply-config.yaml
@@ -6,3 +6,8 @@ team: tripleo
 type: other
 repository-settings:
   openstack/os-apply-config: {}
+releases:
+  - projects:
+      - hash: 21be52c835180cbe138acbfde4e6ec344ded634e
+        repo: openstack/os-apply-config
+    version: 10.0.0
