--- a/deliverables/stein/os-collect-config.yaml
+++ b/deliverables/stein/os-collect-config.yaml
@@ -6,3 +6,8 @@ team: tripleo
 type: other
 repository-settings:
   openstack/os-collect-config: {}
+releases:
+  - projects:
+      - hash: 5c924cc95edc567beac0392702d31dea10831658
+        repo: openstack/os-collect-config
+    version: 10.0.0
