--- a/deliverables/stein/os-net-config.yaml
+++ b/deliverables/stein/os-net-config.yaml
@@ -6,3 +6,8 @@ team: tripleo
 type: other
 repository-settings:
   openstack/os-net-config: {}
+releases:
+  - projects:
+      - hash: f73505895bc438546d44e8b4853a10a516696b87
+        repo: openstack/os-net-config
+    version: 10.0.0
