--- a/deliverables/stein/paunch.yaml
+++ b/deliverables/stein/paunch.yaml
@@ -6,3 +6,8 @@ team: tripleo
 type: other
 repository-settings:
   openstack/paunch: {}
+releases:
+  - projects:
+      - hash: b22598c7617f8657d275626e3c52f8e88d58a9b5
+        repo: openstack/paunch
+    version: 4.0.0
