nova: release rocky 18.0.2
Change-Id: Icf3111e649fa38f71d9b305f3178587843ca5a3f

--- a/deliverables/rocky/nova.yaml
+++ b/deliverables/rocky/nova.yaml
@@ -40,6 +40,10 @@ releases:
       - hash: 1f1482eb7d1d386d44b72269efbc2d4e320f73a2
         repo: openstack/nova
     version: 18.0.1
+  - projects:
+      - hash: 55b63c4d608c0cf779d6a72af52254fe5efb7466
+        repo: openstack/nova
+    version: 18.0.2
 branches:
   - location: 18.0.0.0rc1
     name: stable/rocky
