--- a/deliverables/queens/nova.yaml
+++ b/deliverables/queens/nova.yaml
@@ -61,6 +61,10 @@ releases:
       - hash: ddb90b8a2d402f8f2ab5598978294c3179bbf30a
         repo: openstack/nova
     version: 17.0.6
+  - projects:
+      - hash: a48c1123cd0dedf0c0a8978b76bacb1987766255
+        repo: openstack/nova
+    version: 17.0.7
 cycle-highlights:
   - |
     The performance of listing instances across a multi-cell cells v2
