nova: release pike 16.1.6
Change-Id: I055f102ee8cd726ce6e25ce868396f62d991a459

--- a/deliverables/pike/nova.yaml
+++ b/deliverables/pike/nova.yaml
@@ -73,5 +73,9 @@ releases:
       - hash: d9ad26d61999f47adfecc5dcdc89c67bf9e95f4e
         repo: openstack/nova
     version: 16.1.5
+  - projects:
+      - hash: 3e07bcb327aec6cf2ee83b4981cf89539f5a588d
+        repo: openstack/nova
+    version: 16.1.6
 repository-settings:
   openstack/nova: {}
