nova: release ocata 15.1.5
Change-Id: I9d4a862429297c4968d714ba1cfaea50c908debd

--- a/deliverables/ocata/nova.yaml
+++ b/deliverables/ocata/nova.yaml
@@ -85,5 +85,9 @@ releases:
       - hash: 72ab303ef493b29b70654b681749269eb4bbe2c4
         repo: openstack/nova
     version: 15.1.4
+  - projects:
+      - hash: 8c663dbd25a0dab1c2d903efc7cf7fc3d9d07b00
+        repo: openstack/nova
+    version: 15.1.5
 repository-settings:
   openstack/nova: {}
