nova: tag ocata-em
This applies the "ocata-em" tag to the final ocata
release which puts the stable/ocata branch into
extended maintenance mode [1][2].

[1] https://docs.openstack.org/project-team-guide/stable-branches.html#extended-maintenance
[2] https://governance.openstack.org/tc/resolutions/20180301-stable-branch-eol.html

Change-Id: I36aca7169b137a20613acb1218c03994320a5434

--- a/deliverables/ocata/nova.yaml
+++ b/deliverables/ocata/nova.yaml
@@ -89,5 +89,9 @@ releases:
       - hash: 8c663dbd25a0dab1c2d903efc7cf7fc3d9d07b00
         repo: openstack/nova
     version: 15.1.5
+  - projects:
+      - hash: 8c663dbd25a0dab1c2d903efc7cf7fc3d9d07b00
+        repo: openstack/nova
+    version: ocata-em
 repository-settings:
   openstack/nova: {}
